# swisshacks2024

./: .gitignore  README.md  final_submission.csv  frontend_final_version  mapping_real recording to users.csv  real_recordings.numbers
_experiments/david/: 01-voice-tts.py  02-api.py  05-baseline-jb-data.ipynb  06-speech-to-text.ipynb  07-transcription-ner.ipynb  08-transcription-ner-ollama.ipynb  09-transcription-ner-ollama.py  10-transcription-ner-ollama-homophones.ipynb  11-transcription-ner-ollama-fuzzy.ipynb  12-transcription-ner-ollama-fuzzy.py  13-fuzzy-name-match-to-real-user.ipynb  14-combine-csvs.ipynb  requirements.txt  visualising-audio-data-in-python.ipynb
_experiments/joachim/: fake_audio_detection.ipynb  voice_similarity.py
backend/: README.md  csv_merge  docker-compose.yml
backend/api/: Dockerfile  pyproject.toml
backend/api/app/: __init__.py  main.py
backend/api/app/routes/: default.py  inference.py
backend/ml/: Dockerfile  README.md  requirements.in  requirements.txt
backend/ml/app/: main.py
backend/ml/app/models/: fact_checking.py  transcription.py
data/: README.md
data/jb-swisshacks2024/: 360_20_v4.csv  fact_checks_v2.csv  fake_audio_classification_results.csv  prefinal_is_fake_and_facts.csv
frontend/: frontend  main.py  test_2  test_samuel
