[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["dvdblk <git@dvdblk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
asyncpg = "^0.28.0"
pandas = "^2.1.3"
aiohttp = "^3.9.1"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
structlog = "^23.2.0"
dramatiq = {extras = ["redis"], version = "^1.17.0"}
torch = "^2.3.1"
python-multipart = "^0.0.9"
librosa = "0.10.2.post1"
numpy = "1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"